Add forgot password links to signin page + headers

--- a/client/templates/admin/account/create.html
+++ b/client/templates/admin/account/create.html
@@ -5,6 +5,8 @@
     <option value="admin" selected>Admin</option>
     <option value="helpDesk">Help Desk</option>
   </select>
-  <input placeholder="email address" type="email" ng-model="email" class="form-control">
+  <input placeholder="First Name" ng-model="firstName" class="form-control">
+  <input placeholder="Last Name" ng-model="lastName" class="form-control">
+  <input placeholder="Email Address" type="email" ng-model="email" class="form-control">
   <input type="submit" class="btn btn-primary">
 </form>
