--- a/client/templates/authentication/resetPasswordView.html
+++ b/client/templates/authentication/resetPasswordView.html
@@ -1,3 +1,5 @@
+<h1>{{userHeader}} Reset Password</h1>
+
 <form ng-submit="resetPassword()">
   <input placeholder="password" type="password" ng-model="password">
   <input placeholder="confirm password" type="password" ng-model="passwordConfirmation">
