--- a/client/templates/authentication/sendResetView.html
+++ b/client/templates/authentication/sendResetView.html
@@ -1,3 +1,5 @@
+<h1>{{userHeader}} Send Password Reset</h1>
+
 <form ng-submit="sendReset()">
   <input placeholder="email address" type="email" ng-model="email">
   <input type="submit">
