--- a/client/templates/admin/account/create.html
+++ b/client/templates/admin/account/create.html
@@ -1,4 +1,5 @@
 <h1>Create New User</h1>
+<h2 ng-show="error">{{error}}</h2>
 <form ng-submit="signup(true)" ng-hide="submitting" class="form-inline">
   <select name="select" ng-model="userType" class="form-control">
     <option value="workers">Worker</option> 
