--- a/client/templates/authentication/sendResetView.html
+++ b/client/templates/authentication/sendResetView.html
@@ -1,6 +1,8 @@
 <h1>{{userHeader}} Send Password Reset</h1>
 
-<form ng-submit="sendReset()">
+<h3 ng-show="status">{{status}}</h3>
+
+<form ng-submit="sendReset()" ng-hide="status">
   <input placeholder="email address" type="email" ng-model="email">
   <input type="submit">
 </form>
