Allow admins to issue password resets

--- a/client/templates/admin/account/users.html
+++ b/client/templates/admin/account/users.html
@@ -12,11 +12,14 @@
 </ul>
 
 <table class="table table-striped">
-  <tr><th>User ID</th><th>Email</th><th>Privileges</th></tr>
+  <tr><th>User ID</th><th>Email</th><th>Privileges</th><th>Send Reset Email</th></tr>
   <tr ng-repeat="user in users"><td>{{ user.id }}</td><td>{{ user.email }}</td>
     <td>
       <button class="btn btn-primary" ng-click="grantAccess(user)" ng-hide="user.hasAccess">Grant Access</button>
       <button class="btn btn-danger" ng-click="revokeAccess(user)" ng-show="user.hasAccess">Revoke Access</button>
+    </td>
+    <td>
+      <button class="btn btn-primary" ng-click="issuePasswordReset(user)">Send Password Reset Email</button>
     </td>
   </tr>
 </table>
