--- a/client/templates/admin/account/users.html
+++ b/client/templates/admin/account/users.html
@@ -15,11 +15,13 @@
   <tr><th>User ID</th><th>Email</th><th>Privileges</th><th>Send Reset Email</th></tr>
   <tr ng-repeat="user in users"><td>{{ user.id }}</td><td>{{ user.email }}</td>
     <td>
-      <button class="btn btn-primary" ng-click="grantAccess(user)" ng-hide="user.hasAccess">Grant Access</button>
-      <button class="btn btn-danger" ng-click="revokeAccess(user)" ng-show="user.hasAccess">Revoke Access</button>
+      <button class="btn btn-primary" ng-click="grantAccess(user)" ng-hide="user.hasAccess" ng-disabled="user.waitAccess === 1">Grant Access</button>
+      <button class="btn btn-danger" ng-click="revokeAccess(user)" ng-show="user.hasAccess" ng-disabled="user.waitAccess === 1">Revoke Access</button>
     </td>
     <td>
-      <button class="btn btn-primary" ng-click="issuePasswordReset(user)">Send Password Reset Email</button>
+      <button 
+        class="btn btn-primary" ng-click="issuePasswordReset(user)" ng-disabled="user.waitPasswordReset === 1" ng-hide="user.waitPasswordReset === 2">Send Password Reset Email</button>
+      <button class="btn btn-success" ng-show="user.waitPasswordReset === 2" disabled>Password Reset Email Sent!</button>
     </td>
   </tr>
 </table>
