Require password = passwordConfirmation on resetPassword page

--- a/client/templates/authentication/resetPasswordView.html
+++ b/client/templates/authentication/resetPasswordView.html
@@ -1,5 +1,7 @@
 <h1>{{userHeader}} Reset Password</h1>
 
+<h3 ng-show="error">{{error}}</h3>
+
 <form ng-submit="resetPassword()">
   <input placeholder="password" type="password" ng-model="password">
   <input placeholder="confirm password" type="password" ng-model="passwordConfirmation">
