--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -34,7 +34,7 @@
         ng-model="tempChildObj.gender" 
         type="text" 
         name="gender" 
-        placeholder="Gender"/>
+        placeholder="Male or Female"/>
         <br/>
         <input
         required 
