--- a/client/templates/admin/workers.html
+++ b/client/templates/admin/workers.html
@@ -16,15 +16,20 @@
     <div class="panel-heading">
       <h4 class="panel-title" ng-click="getChildren(worker)">
         <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{worker.id}}">
-          {{worker.firstName}} {{worker.lastName}} {{worker.email}}
+          {{worker.firstName}} {{worker.lastName}}: {{worker.email}}
         </a>
       </h4>
     </div>
     <div id="collapse{{worker.id}}" class="panel-collapse collapse">
       <div class="panel-body">
         <table class="table">
-          <tr><th>Worker ID</th><td>{{worker.id}}</td></tr>
-          <tr><th>Children</th><th>First Name</th><th>Last Name</th><th></th></tr>
+          <tr><th>Name</th><td>{{worker.firstName}} {{worker.lastName}}</td></tr>
+          <tr><th>Email</th><td>{{worker.email || 'N/A'}}</td></tr>
+          <tr><th>Phone Number</th><td>{{worker.phone || 'N/A'}}</td></tr>
+          <tr><th>Department</th><td>{{worker.department || 'Test'}}</td></tr>
+          <tr><th>Supervisor</th><td>{{(worker.supervisorFirstName && worker.supervisorLastName) ? worker.supervisorFirstName + ' ' + worker.supervisorLastName : 'N/A'}}</td></tr>
+          <tr><th>Coordinator</th><td>{{(worker.coordinatorFirstName && worker.coordinatorLastName) ? worker.coordinatorFirstName + ' ' + worker.coordinatorLastName : 'N/A'}} {{worker.coordinatorLastName}}</td></tr>
+          <tr ng-show="worker.children"><th>Children</th><th>First Name</th><th>Last Name</th><th></th></tr>
           <tr ng-repeat="child in worker.children">
             <td></td>
             <td>{{child.firstName}}</td>
