--- a/client/templates/admin/children.html
+++ b/client/templates/admin/children.html
@@ -23,8 +23,13 @@
     <div id="collapse{{child.id}}" class="panel-collapse collapse">
       <div class="panel-body">
         <table class="table">
-          <tr><th>Child ID</th><td>{{child.id}}</td></tr>
+          <tr><th>Name</th><td>{{child.firstName + ' ' + child.lastName}}</td></tr>
           <tr><th>CFID</th><td>{{child.cfid}}</td></tr>
+          <tr><th>Phone</th><td>{{child.phone || 'N/A'}}</td></tr>
+          <tr><th>Gender</th><td>{{child.gender || 'N/A'}}</td></tr>
+          <tr><th>Age</th><td>{{child.age || 'N/A'}}</td></tr>
+          <tr><th>Location</th><td>{{child.location || 'N/A'}}</td></tr>
+          <tr><th>Program Area</th><td>{{child.programArea || 'N/A'}}</td></tr>
           <tr ng-show="child.worker">
             <th>Worker</th>
             <td>{{child.worker.firstName}}</td>
