--- a/client/templates/helpDesk/account/create.html
+++ b/client/templates/helpDesk/account/create.html
@@ -9,5 +9,5 @@
   <input placeholder="First Name" ng-model="firstName" class="form-control">
   <input placeholder="Last Name" ng-model="lastName" class="form-control">
   <input placeholder="Email Address" type="email" ng-model="email" class="form-control">
-  <input type="submit" class="btn btn-primary">
+  <input type="submit" class="btn btn-primary" ng-disabled="waitSignup">
 </form>
