--- a/client/templates/authentication/resetPasswordView.html
+++ b/client/templates/authentication/resetPasswordView.html
@@ -1,6 +1,6 @@
 <h1>{{userHeader}} Reset Password</h1>
 
-<h3 ng-show="error">{{error}}</h3>
+<div class="alert alert-danger" ng-show="error">{{error}}</div>
 
 <form ng-submit="resetPassword()">
   <input placeholder="password" type="password" ng-model="password">
