--- a/client/templates/admin/reports.html
+++ b/client/templates/admin/reports.html
@@ -1,10 +1,8 @@
 <h1>Generate Reports</h1>
 
-<div ng-show="generatingReport">
-  <h2>{{generateReportMessage}}</h2>
-</div>
+<div class="alert alert-info" ng-show="generatingReport">{{generateReportMessage}}</div>
 
-<h2 ng-show="error">{{error}}</h2>
+<div class="alert alert-danger" ng-show="error">{{error}}</div>
 
 <div class="row" ng-hide="generatingReport" ng-submit="generateReport()">
   <div class="col-md-2">
