--- a/client/assets/stylesheets/style.css
+++ b/client/assets/stylesheets/style.css
@@ -1,7 +1,3 @@
-body {
-  padding-top: 60px;
-}
-
 .center {
   text-align: center;
 }
@@ -29,6 +25,39 @@ body {
   display: inline-block;
 }
 
+/* Homepage Styles */
+#hsa-logo {
+  height: 17%;
+  width: 17%;
+  margin-top: 7px;
+}
+
+#public-nav {
+  height: 70px;
+  background-color: white;
+}
+
+#tagline {
+  font-size: 24px;
+  margin-top: 10px;
+  background-color: lightgrey;
+}
+
+#tagline p{
+  margin-top: 7px;
+}
+
+.child-box{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.child-box .name{
+  font-size: 24px;
+  margin-bottom: 10px;
+  margin-top: -12px;
+}
 
 /* Input Verification Styles */
 .createChildTag input.ng-invalid, .pledge input.ng-invalid {
