--- a/client/templates/workers/childrenFeed.html
+++ b/client/templates/workers/childrenFeed.html
@@ -109,6 +109,36 @@
             class="pledgedText" 
             ng-show="child.status">
               Pledged
+              <!-- Undo Pledge -->
+              <!-- Button trigger modal -->
+              <button class="btn btn-danger btn-xs" data-toggle="modal" data-target="#myModal">
+                Unpledge
+              </button>
+
+              <!-- Modal -->
+              <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                      <h4 class="modal-title" id="myModalLabel">Are you sure?</h4>
+                    </div>
+                    <div class="modal-body">
+                      This action will <strong>delete</strong> {{ child.firstName }} {{ child.lastName }}'s current donor and add him/her back to the home page.
+                      <br/>
+                      <br/>
+                      If you're sure, please type DELETE into the box below, and click Delete.
+                      <input type="text" name="delete" ng-model="deleteConfirm" placeholder="DELETE"/>
+                    </div>
+                    <div class="modal-footer">
+                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                      <button type="button" class="deleteBtn btn btn-danger" ng-click="unpledge(child.id, deleteConfirm)">Delete</button>
+                  <!--     <button ng- type="button" data-dismiss="modal">Exit</button> -->
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- /Undo Pledge -->
             </td>
           </tr>
 
