Add child first name/last name data rather than placeholder

--- a/client/templates/public/home.html
+++ b/client/templates/public/home.html
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <p class="name">Firstname Lastname</p>
+        <p class="name">{{child.firstName}} {{child.lastName}}</p>
       </div>
     </div>
     <div class="row">
