--- a/client/templates/admin/account.html
+++ b/client/templates/admin/account.html
@@ -36,4 +36,6 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<div ui-view></div>
+<div class="container navbar-padding">
+  <div ui-view></div>
+</div>
