--- a/client/templates/helpDesk/account.html
+++ b/client/templates/helpDesk/account.html
@@ -1,8 +1,10 @@
-<h1>Help Desk Account Page</h1>
+ <div class="container navbar-padding">
+  <h1>Help Desk Account Page</h1>
 
-<button ui-sref="helpDesk.account.accountManagement.create" class="btn btn-primary">Add New User</button>
-<button ui-sref="helpDesk.account.accountManagement.workers" class="btn btn-primary">Show Workers</button>
-<button ui-sref="helpDesk.account.accountManagement.admin" class="btn btn-primary">Show Admin</button>
-<button ui-sref="helpDesk.account.accountManagement.helpDesk" class="btn btn-primary">Show Help Desk Users</button>
+  <button ui-sref="helpDesk.account.accountManagement.create" class="btn btn-primary">Add New User</button>
+  <button ui-sref="helpDesk.account.accountManagement.workers" class="btn btn-primary">Show Workers</button>
+  <button ui-sref="helpDesk.account.accountManagement.admin" class="btn btn-primary">Show Admin</button>
+  <button ui-sref="helpDesk.account.accountManagement.helpDesk" class="btn btn-primary">Show Help Desk Users</button>
 
-<div ui-view></div>
+  <div ui-view></div>
+ </div>
