--- a/client/templates/workers/createChildTag.html
+++ b/client/templates/workers/createChildTag.html
@@ -1,139 +1,127 @@
 <form name="donor_info" role="form" novalidate class="createChildTag">
-  <div class="container-fluid">
-    <div class="row">
-      <!-- child data -->
-      <div class="col-md-4">
-        <h2>Child Info</h2>
-        <input 
-        required
-        ng-pattern="/[\D]/g"
-        ng-model="tempChildObj.firstName" 
-        type="text" 
-        name="firstName" 
-        placeholder="First Name"/>
-        <br/>
-        <input 
-        required
-        ng-pattern="/[\D]/g"
-        ng-model="tempChildObj.lastName" 
-        type="text" 
-        name="lastName" 
-        placeholder="Last Name"/>
-        <br/>
-        <input
-        required 
-        ng-pattern="/[\d]/g"
-        ng-model="tempChildObj.phone" 
-        type="text" 
-        name="childPhone" 
-        placeholder="Phone"/>
-        <br/>
-        <input
-        required 
-        ng-pattern="/[a-zA-Z]/g"
-        ng-model="tempChildObj.gender" 
-        type="text" 
-        name="gender" 
-        placeholder="Male or Female"/>
-        <br/>
-        <input
-        required 
-        ng-pattern="/[\d\W]/g"
-        ng-model="tempChildObj.dob" 
-        type="date" 
-        name="dob"/>
-        <br/>
-        <input
-        required 
-        ng-pattern="/[\d]/g"
-        ng-model="tempChildObj.age" 
-        type="text" 
-        name="age" 
-        placeholder="Age"/>
-        <br/>
-        <input
-        required 
-        ng-model="tempChildObj.location" 
-        type="text" 
-        name="location" 
-        placeholder="Location"/>
-        <br/>
-        <input
-        required 
-        ng-model="tempChildObj.programArea" 
-        type="text" 
-        name="programArea" 
-        placeholder="Program Area"/>
-        <br/>
-        <input
-        required 
-        ng-model="tempChildObj.bio" 
-        type="text" 
-        name="bio" 
-        placeholder="Bio"/>
-      </div>
-      <!-- Request Data -->
-      <div class="col-md-4">
-        <h2>Request Info</h2>
-        <input 
-        required
-        ng-model="tempChildObj.firstItemName" 
-        type="text" 
-        name="item1" 
-        placeholder="First Item"/>
-        <br/>
-        <input 
-        required
-        ng-pattern="/[\d$.]/g"
-        ng-model="tempChildObj.firstItemPrice" 
-        type="text" 
-        name="item1Price" 
-        placeholder="Price"/>
-        <br/>
-        <br/>
-        <input 
-        ng-model="tempChildObj.secondItemName" 
-        type="text" 
-        name="item2" 
-        placeholder="Second Item"/>
-        <br/>
-        <input 
-        ng-model="tempChildObj.secondItemPrice" 
-        ng-pattern="/[\d$.]/g"
-        type="text" 
-        name="item2Price" 
-        placeholder="Price"/>
-        <br/>
-        <br/>
-        <input 
-        ng-model="tempChildObj.thirdItemName" 
-        type="text" 
-        name="item3" 
-        placeholder="Third Item"/>
-        <br/>
-        <input 
-        ng-model="tempChildObj.thirdItemPrice" 
-        ng-pattern="/[\d$.]/g"
-        type="text" 
-        name="item3Price" 
-        placeholder="Price"/>
-      </div>
-
-      <br/>
-      <br/>
-    <!-- end of .row -->
+  <div class="row">
+    <div class="col-md-4">
+      <h2>Child Info</h2>
+      <input 
+      class="form-control"
+      required
+      ng-pattern="/[\D]/g"
+      ng-model="tempChildObj.lastName" 
+      type="text" 
+      name="lastName" 
+      placeholder="Last Name"/>
+      <input
+      class="form-control"
+      required 
+      ng-pattern="/[\d]/g"
+      ng-model="tempChildObj.phone" 
+      type="text" 
+      name="childPhone" 
+      placeholder="Phone"/>
+      <select class="form-control" ng-model="tempChildObj.gender" name="gender">
+        <option value="Male">Male</option> 
+        <option value="Female">Female</option>
+      </select>
+      <!-- <input
+      class="form-control"
+      required 
+      ng-pattern="/[a-zA-Z]/g"
+      ng-model="tempChildObj.gender" 
+      type="text" 
+      name="gender" 
+      placeholder="Male or Female"/> -->
+      <input
+      class="form-control"
+      required 
+      ng-pattern="/[\d\W]/g"
+      ng-model="tempChildObj.dob" 
+      type="date" 
+      name="dob"/>
+      <input
+      class="form-control"
+      required 
+      ng-pattern="/[\d]/g"
+      ng-model="tempChildObj.age" 
+      type="text" 
+      name="age" 
+      placeholder="Age"/>
+      <input
+      class="form-control"
+      required 
+      ng-model="tempChildObj.location" 
+      type="text" 
+      name="location" 
+      placeholder="Location"/>
+      <input
+      class="form-control"
+      required 
+      ng-model="tempChildObj.programArea" 
+      type="text" 
+      name="programArea" 
+      placeholder="Program Area"/>
+      <input
+      class="form-control"
+      required 
+      ng-model="tempChildObj.bio" 
+      type="text" 
+      name="bio" 
+      placeholder="Bio"/>
     </div>
-
-      <!-- buttons -->
-      <div class="center" ng-controller="imageController">
-        <input name="file" type="file" accept="image/*" ng-file-select="onFileSelect($files)">
-        <input
-        class="btn btn-success" 
-        type="button" 
-        ng-click="uploadImageThenCreateChild()"
-        name="submit" 
-        value="Submit"/>
-        <button class="btn btn-danger" ui-sref="workers.account">Back</button>
-      </div>
+    <div class="col-md-4">
+      <h2>Request Info</h2>
+      <input 
+      class="form-control"
+      required
+      ng-model="tempChildObj.firstItemName" 
+      type="text" 
+      name="item1" 
+      placeholder="First Item"/>
+      <input 
+      class="form-control"
+      required
+      ng-pattern="/[\d$.]/g"
+      ng-model="tempChildObj.firstItemPrice" 
+      type="text" 
+      name="item1Price" 
+      placeholder="Price"/>
+      <input 
+      class="form-control"
+      ng-model="tempChildObj.secondItemName" 
+      type="text" 
+      name="item2" 
+      placeholder="Second Item"/>
+      <input 
+      class="form-control"
+      ng-model="tempChildObj.secondItemPrice" 
+      ng-pattern="/[\d$.]/g"
+      type="text" 
+      name="item2Price" 
+      placeholder="Price"/>
+      <input 
+      class="form-control"
+      ng-model="tempChildObj.thirdItemName" 
+      type="text" 
+      name="item3" 
+      placeholder="Third Item"/>
+      <input 
+      class="form-control"
+      ng-model="tempChildObj.thirdItemPrice" 
+      ng-pattern="/[\d$.]/g"
+      type="text" 
+      name="item3Price" 
+      placeholder="Price"/>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-8" ng-controller="imageController">
+      <input name="file" type="file" accept="image/*" ng-file-select="onFileSelect($files)">
+      <input
+      class="btn btn-success" 
+      type="button" 
+      ng-click="uploadImageThenCreateChild()"
+      name="submit" 
+      value="Submit"/>
+      <button class="btn btn-danger" ui-sref="workers.account">Back</button>
+    </div>
   </div>
 </form>
